updated portfolio with experience from Bluestem

--- a/index.html
+++ b/index.html
@@ -170,10 +170,50 @@
 	        		</div>
         			<div class="cols_66">
 	        			<div class="experience_row">
+                            <h4 class="title">Senior Web Production Specialist</h4>
+                            <p class="company_name">Bluestem Brands, Inc.</p>
+                            <p class="clear">October 2018 - Present</p>
+                            <p class="description">Headquartered in suburban Minneapolis, Bluestem is the parent company to 13 dynamic eCommerce retail brands. Currently responsible for 5 of their 13 brands. Execute, maintain and supervise the Web Production team. On a daily basis support the web designers & ecommerce managers writing HTML & CSS code to execute emails, homepages, landing pages, banners & various other digital assets. Research solutions to streamline existing process and implement new processes.</p>
+                            <div class="expandable_container">
+                                <ul class="columns">
+                                    <li>Develop HTML final assets from approved designs created by the in-house web designers.</li>
+                                    <li>Daily production of all HTML assets including emails, homepages, landing pages, banners and any other digital assets.</li>
+                                    <li>Troubleshoot rendering errors, links and adjust problematic code as necessary.</li>
+                                    <li>Contribute to the creating of new or existing templates for the web designer based on ticket requests.</li>
+                                    <li>Generate still or animated graphics (GIFs) upon request.</li>
+                                    <li>Stay up to date on current trends and practices happening in the email development community, research and contribute to new initiatives.</li>
+                                    <li>Write, edit & maintain SOP’s on web production process.</li>
+                                    <li>Mentor & train new or existing co-workers on changing web production procedures.</li>
+                                    <li>Create and implement new features and user improvements across brands for a better workflow.</li>
+                                    <li>Partner with Site Operations to create new or seamless execution of all site graphics.</li>
+                                    <li>Troubleshoot Site & Email Creative/Production issues.</li>
+                                </ul>
+                            </div>
+                            <img class="down-arrow" src="images/down-arrow.png" />
+                            <p class="show_more">Show More</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
 	        				<h4 class="title">Senior Web Developer</h4>
 	        				<p class="company_name">Craft World Wide Boston</p>
 	        				<p class="clear">July 2016 - March 2018</p>
 	        				<p class="description">When Craft WW acquired Staples’ internal creative agency, I was promoted to Senior Web Developer and continued to push the boundaries of technical innovation with a concentration on newer technologies as well as increasing user experience, responsive and adaptive development.<br/><br />Solved a myriad of critical problems during the acclimation of Craft WW into the Staples infrastructure. Helped familiarize Craft WW New York with the Staples brand and infrastructure.</p>
+                            <div class="expandable_container">
+                                <ul class="columns">
+                                    <li>Invented an HTML5 interface for rapid-prototyping of HTML5 banners for both internal and external creative review meetings.</li> 
+                                    <li>Developed adaptive html modules (code snippets) to four separate breakpoints for consumption via the Staples.com Product database.</li>
+                                    <li>Created mobile responsive landing pages that were visually appealing and user friendly while adhering to branding guidelines.</li>
+                                    <li>Interfaced with clients, merchants and business stakeholders to ascertain their needs and conceptualize development solutions.</li>
+                                    <li>Maintained source control using Git/Bitbucket.</li> 
+                                    <li>Collaborated with Oracle/Responsys to coordinate the collection of opt-in information via web forms on oracle servers.</li>
+                                    <li>Conceptualized responsive emails for consumption via Salesforce and Responsys/Oracle systems.</li> 
+                                    <li>Coded emails responsive to work on desktop and mobile devices and over 40 email clients.</li>
+                                    <li>Solved critical problems in a fast-paced environment to meet strict deadlines.</li>
+                                    <li>Mentored and managed junior developers.</li>
+                                </ul>
+                            </div>
+                            <img class="down-arrow" src="images/down-arrow.png" />
+                            <p class="show_more">Show More</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
