updated link to say references instead of feedback

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         			<li id="skills"><span class="cool-link">Skills</span></li>
         			<li id="experience"><span class="cool-link">Experience</span></li>
         			<li id="portfolio"><span class="cool-link">Portfolio</span></li>
-                    <li id="feedback"><span class="cool-link">Feedback</span></li>
+                    <li id="feedback"><span class="cool-link">References</span></li>
                     <li id="education"><span class="cool-link">Education</span></li>
                     <li id="interests"><span class="cool-link">Interests</span></li>
                     <li id="contact"><span class="cool-link">Contact Me</span></li>
